openturns/1.24/_sources/auto_meta_modeling/polynomial_chaos_metamodel/plot_chaos_ishigami_grouped_indices.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "auto_meta_modeling/polynomial_chaos_metamodel/plot_chaos_ishigami_grouped_indices.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_auto_meta_modeling_polynomial_chaos_metamodel_plot_chaos_ishigami_grouped_indices.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_auto_meta_modeling_polynomial_chaos_metamodel_plot_chaos_ishigami_grouped_indices.py:


Compute grouped indices for the Ishigami function
=================================================

.. GENERATED FROM PYTHON SOURCE LINES 7-8

In this example, we compute grouped Sobol' indices for the :ref:`Ishigami function <use-case-ishigami>`.

.. GENERATED FROM PYTHON SOURCE LINES 11-16

.. code-block:: Python

    from openturns.usecases import ishigami_function
    import openturns as ot

    ot.Log.Show(ot.Log.NONE)








.. GENERATED FROM PYTHON SOURCE LINES 17-18

We load the Ishigami test function from usecases module:

.. GENERATED FROM PYTHON SOURCE LINES 18-20

.. code-block:: Python

    im = ishigami_function.IshigamiModel()








.. GENERATED FROM PYTHON SOURCE LINES 21-24

The `IshigamiModel` data class contains the input distribution of the random vector
:math:`\vect{X}=\Tr{(X_1, X_2, X_3)}` in `im.inputDistribution` and the Ishigami function in `im.model`.
We also have access to the input variable names with:

.. GENERATED FROM PYTHON SOURCE LINES 24-27

.. code-block:: Python

    input_names = im.inputDistribution.getDescription()









.. GENERATED FROM PYTHON SOURCE LINES 28-29

Create a training sample.

.. GENERATED FROM PYTHON SOURCE LINES 31-35

.. code-block:: Python

    N = 100
    inputTrain = im.inputDistribution.getSample(N)
    outputTrain = im.model(inputTrain)








.. GENERATED FROM PYTHON SOURCE LINES 36-37

Create the chaos.

.. GENERATED FROM PYTHON SOURCE LINES 39-52

.. code-block:: Python

    multivariateBasis = ot.OrthogonalProductPolynomialFactory([im.X1, im.X2, im.X3])
    selectionAlgorithm = ot.LeastSquaresMetaModelSelectionFactory()
    projectionStrategy = ot.LeastSquaresStrategy(
        inputTrain, outputTrain, selectionAlgorithm
    )
    totalDegree = 8
    enumfunc = multivariateBasis.getEnumerateFunction()
    P = enumfunc.getStrataCumulatedCardinal(totalDegree)
    adaptiveStrategy = ot.FixedStrategy(multivariateBasis, P)
    chaosalgo = ot.FunctionalChaosAlgorithm(
        inputTrain, outputTrain, im.inputDistribution, adaptiveStrategy, projectionStrategy
    )








.. GENERATED FROM PYTHON SOURCE LINES 53-57

.. code-block:: Python

    chaosalgo.run()
    result = chaosalgo.getResult()
    metamodel = result.getMetaModel()








.. GENERATED FROM PYTHON SOURCE LINES 58-59

Print Sobol' indices.

.. GENERATED FROM PYTHON SOURCE LINES 61-64

.. code-block:: Python

    chaosSI = ot.FunctionalChaosSobolIndices(result)
    chaosSI






.. raw:: html

    <div class="output_subarea output_html rendered_html output_result">
    FunctionalChaosSobolIndices
    <ul>
      <li>input dimension: 3</li>
      <li>output dimension: 1</li>
      <li>basis size: 16</li>
      <li>mean: [3.48273]</li>
      <li>std-dev: [3.70612]</li>
    </ul>
    <table>
      <tr>
        <th>Input</th>
        <th>Variable</th>
        <th>Sobol' index</th>
        <th>Total index</th>
      </tr>
      <tr>
        <td>0</td>
        <td>X1</td>
        <td>0.316757</td>
        <td>0.557175</td>
      </tr>
      <tr>
        <td>1</td>
        <td>X2</td>
        <td>0.442820</td>
        <td>0.442853</td>
      </tr>
      <tr>
        <td>2</td>
        <td>X3</td>
        <td>0.000000</td>
        <td>0.240424</td>
      </tr>
    </table>
    <table>
      <tr>
        <th>Index</th>
        <th>Multi-index</th>
        <th>Part of variance</th>
      </tr>
      <tr>
        <td>5</td>
        <td>[0,4,0]</td>
        <td>0.278531</td>
      </tr>
      <tr>
        <td>1</td>
        <td>[1,0,0]</td>
        <td>0.193813</td>
      </tr>
      <tr>
        <td>4</td>
        <td>[1,0,2]</td>
        <td>0.131990</td>
      </tr>
      <tr>
        <td>10</td>
        <td>[0,6,0]</td>
        <td>0.131954</td>
      </tr>
      <tr>
        <td>3</td>
        <td>[3,0,0]</td>
        <td>0.119909</td>
      </tr>
      <tr>
        <td>7</td>
        <td>[3,0,2]</td>
        <td>0.087691</td>
      </tr>
      <tr>
        <td>2</td>
        <td>[0,2,0]</td>
        <td>0.024288</td>
      </tr>
      <tr>
        <td>8</td>
        <td>[1,0,4]</td>
        <td>0.010603</td>
      </tr>
    </table>

    </div>
    <br />
    <br />

.. GENERATED FROM PYTHON SOURCE LINES 65-66

We compute the first order indice of the group `[0,1]` .

.. GENERATED FROM PYTHON SOURCE LINES 68-70

.. code-block:: Python

    chaosSI.getSobolGroupedIndex([0, 1])





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    0.7595764133948941



.. GENERATED FROM PYTHON SOURCE LINES 71-78

This group collects all the multi-indices containing variables only in this group, including interactions within the group (by decreasing order of significance):

* [0,4,0] : 0.279938
* [1,0,0] : 0.190322
* [0,6,0] : 0.130033
* [3,0,0] : 0.12058
* [0,2,0] : 0.0250262

.. GENERATED FROM PYTHON SOURCE LINES 80-82

.. code-block:: Python

    0.279938 + 0.190322 + 0.130033 + 0.12058 + 0.0250262





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    0.7458992



.. GENERATED FROM PYTHON SOURCE LINES 83-84

The difference between the previous sum and the output of `getSobolGroupedIndex` is lower than 0.01, which is the threshold used by the `__str__` method.

.. GENERATED FROM PYTHON SOURCE LINES 86-87

We compute the total order indice of the group [1,2].

.. GENERATED FROM PYTHON SOURCE LINES 89-91

.. code-block:: Python

    chaosSI.getSobolGroupedTotalIndex([1, 2])





.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    0.6832431353476381



.. GENERATED FROM PYTHON SOURCE LINES 92-100

This group collects all the multi-indices containing variables in this group, including interactions with variables outside the group:

* [0,4,0] : 0.279938
* [1,0,2] : 0.136823
* [0,6,0] : 0.130033
* [3,0,2] : 0.0837457
* [0,2,0] : 0.0250262
* [1,0,4] : 0.0111867

.. GENERATED FROM PYTHON SOURCE LINES 102-103

.. code-block:: Python

    0.279938 + 0.136823 + 0.130033 + 0.0837457 + 0.0250262 + 0.0111867




.. rst-class:: sphx-glr-script-out

 .. code-block:: none


    0.6667526




.. _sphx_glr_download_auto_meta_modeling_polynomial_chaos_metamodel_plot_chaos_ishigami_grouped_indices.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_chaos_ishigami_grouped_indices.ipynb <plot_chaos_ishigami_grouped_indices.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_chaos_ishigami_grouped_indices.py <plot_chaos_ishigami_grouped_indices.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: plot_chaos_ishigami_grouped_indices.zip <plot_chaos_ishigami_grouped_indices.zip>`
